--- a/src/main/resources/org/sonar/l10n/java/rules/squid/AvoidClassInstanceObject_java.html
+++ b/src/main/resources/org/sonar/l10n/java/rules/squid/AvoidClassInstanceObject_java.html
@@ -1,11 +1,11 @@
-<p>This rule detects the variable instance in class level other than whitelisted</p>
+<p>This rule detects the variable instance in class level other than allowed list</p>
 <h2>Use only local variables</h2>
 <pre>
-BSL is not allowing to use Global Variables. Only the local variables can be allowed in methods
+For creating a thread safe web application, it is important to make sure the class level global variables are session/request scoped. 
 </pre>
 <h2>Compliant Solution</h2>
 <pre>
-Remove the Global Variable declaration or Whitelist the variables which is really required. 
+Remove the Global Variable declaration or get approval from manager to add the variables to allowed list which is really required. 
 </pre>
 
 
